--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,23 +13,24 @@ flutter:
 dependencies:
   flutter:
     sdk: flutter
-  objectbox: ^1.2.1
+  objectbox: ^1.5.0
   objectbox_flutter_libs: any
-  path_provider: ^2.0.1
-  sqflite: ^2.0.0+3
-  path: ^1.8.0
-  cupertino_icons: ^1.0.2
-  hive: ^2.0.4
-  firebase_core: ^1.1.0
-  cloud_firestore: ^2.1.0
-  isar: ^0.4.0
-  isar_flutter_libs: ^0.4.0
+  path_provider: ^2.0.10
+  sqflite: ^2.0.2+1
+  path: ^1.8.2
+  cupertino_icons: ^1.0.4
+  hive: ^2.2.1
+  firebase_core: ^1.17.0
+  cloud_firestore: ^3.1.16
+  isar: ^2.5.0
+  isar_flutter_libs: ^2.5.0
 
 dev_dependencies:
+  analyzer: ^3.0.0
   objectbox_generator: any
   build_runner: any
   hive_generator: any
-  isar_generator: ^0.4.0
+  isar_generator: ^2.5.0
 
 #dependency_overrides:
 #  objectbox:
